Hello everyone

Qt: segfault on THEDP at exit on plasma wayland

Regression after !7351 (merged), cannot reproduce on gnome shell, sway or weston.

vlc: ../../../../modules/gui/qt/dialogs/dialogs_provider.hpp:101: static DialogsProvider* DialogsProvider::getInstance(): Assertion `instance' failed.

Thread 10 "vlc-qt" received signal SIGABRT, Aborted.
[Switching to Thread 0x7fffe226c6c0 (LWP 587849)]
0x00007ffff7b2774c in ?? () from /usr/lib/libc.so.6
(gdb) bt
#0  0x00007ffff7b2774c in ?? () from /usr/lib/libc.so.6
#1  0x00007ffff7acddc0 in raise () from /usr/lib/libc.so.6
#2  0x00007ffff7ab557a in abort () from /usr/lib/libc.so.6
#3  0x00007ffff7ab54e3 in ?? () from /usr/lib/libc.so.6
#4  0x00007ffff4afe360 in DialogsProvider::getInstance ()
    at ../../../../modules/gui/qt/dialogs/dialogs_provider.hpp:101
#5  0x00007ffff4afe465 in DialogsProvider::getInstance () at /usr/include/qt6/QtCore/qlist.h:524
#6  QuitSpy::eventFilter (this=<optimized out>, o=<optimized out>, e=<optimized out>)
    at ../../../../modules/gui/qt/qt.cpp:938
#7  QuitSpy::eventFilter (this=<optimized out>, o=<optimized out>, e=<optimized out>)
    at ../../../../modules/gui/qt/qt.cpp:933
#8  0x00007fffe61674d8 in QCoreApplicationPrivate::sendThroughApplicationEventFilters(QObject*, QEvent*) () from /usr/lib/libQt6Core.so.6
#9  0x00007fffe7901c94 in QApplicationPrivate::notify_helper(QObject*, QEvent*) ()
   from /usr/lib/libQt6Widgets.so.6
#10 0x00007fffe6168118 in QCoreApplication::notifyInternal2(QObject*, QEvent*) ()
   from /usr/lib/libQt6Core.so.6
#11 0x00007fffe61684fb in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*)
    () from /usr/lib/libQt6Core.so.6
#12 0x00007fffe643fcf8 in ?? () from /usr/lib/libQt6Core.so.6
#13 0x00007fffe5f0887d in ?? () from /usr/lib/libglib-2.0.so.0
#14 0x00007fffe5f09cd7 in ?? () from /usr/lib/libglib-2.0.so.0
#15 0x00007fffe5f09ee5 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#16 0x00007fffe643c5e2 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt6Core.so.6
#17 0x00007fffe61744b6 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib/libQt6Core.so.6
--Type <RET> for more, q to quit, c to continue without paging--c
#18 0x00007fffe616c7c1 in QCoreApplication::exec() () from /usr/lib/libQt6Core.so.6
#19 0x00007ffff4b4e5ae in Thread (obj=0x5555556b03b0) at ../../../../modules/gui/qt/qt.cpp:1168
#20 0x00007ffff7b257eb in ?? () from /usr/lib/libc.so.6
#21 0x00007ffff7ba918c in ?? () from /usr/lib/libc.so.6